--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: James Grant
 email: james@jwgmedia.co.uk
 description: Full stack & mobile developer
 baseurl: /jameswgrant/
-url: http://sproogen.github.io/jameswgrant/
+url: http://sproogen.github.io
 
 # Build settings
 markdown: kramdown
