--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
+# Site
+repository: sproogen/jameswgrant
+favicon: images/favicon.ico
+
 # Personal info
 name: James Grant
 title: Full Stack & Mobile Developer
 email: james@jwgmedia.co.uk
 website: www.jwgmedia.co.uk
-
-repository: sproogen/jameswgrant
-
-favicon: images/favicon.ico
 
 # Social links
 twitter_username: sproogen
