--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,25 +1,35 @@
 - company: Royal Bank of Scotland
   dates: August 2017 - Present
   job_title: Software Engineer
-  description: >
-    TODO
+  description: |
+    I am currently working at The Royal Bank on Scotland as a full stack engineer focusing mostly on the front end of a corporate banking product.
+    Working as part of a scrum team consiting of 5 developers, 2 testers and a PO/BA I have the oportunity to help drive the team forwards and
+    work with the PO defining what we are building.
+
+    I spend most of my time working on a specifc area of a large application that our team take ownership over. The front end is a <mark>React</mark> app
+    that talks to an API built using a collection of <mark>Java</mark> microservices. I have spent time working in multiple parts of the stack including
+    helping to define our front end architecure to follow best practices to implementing PDF and CSV export in a microservice.
+
+    I enjoy learning about all areas of our application which allows me to be a go-to person for knowledge and queries within my team and the other teams
+    in the office. I am always looking to suggest improvements and challenge what and how we are working to make sure we are delivering the best service
+    to the customers while also developing to the highest standards.
 
 - company: Simitive
   link: www.simitive.com
   dates: November 2015 - August 2017
   job_title: Developer
-  description: >
+  description: |
     During my time at Simitive I worked as part of an agile team building our own in house web based software and
     also a large scale website for an international client. I gained experience working with a continuous integration
     workflow using tools such as <mark>Jenkins</mark> and working with Amazon Web Services for deployments. We built most
     of our software using <mark>Symfony</mark>, <mark>Backbone</mark>, <mark>Marionette</mark>, <mark>Vue</mark> and <mark>Vuex</mark>.
-    <br><br>
+
     For 6 months I was working on delivering a standalone web product for an international client that services over
     600,000 users. This has been built from the ground up using <mark>Symfony</mark> to provide a backend API and
     <mark>Backbone</mark> for the front end. I also gained a lot of experience with <mark>Elasticsearch</mark> to provide
     search functionality of millions of entities to the front end. During the project I spent time out of hours
     communicating with the client, performing deployments and providing support.
-    <br><br>
+
     Towards the end of my time at Simitive my role involved assisting with the company's devOps, this included managing
     our <mark>AWS</mark> infrastructure as well as deploying and migrating sites. I also spend time configuring and maintaining
     our clients SSO, this mostly involves configuring new clients who are using <mark>AD FS</mark>, <mark>Shibboleth</mark> and
@@ -28,7 +38,7 @@
 - company: Freelance
   dates: September 2016 - October 2016
   job_title: Android Development
-  description: >
+  description: |
     I was asked to update an existing Android app to the latest version of Android and to fix any issues caused by
     this as well as a few other existing issues. This project had a very tight time scale and I was able to complete
     it in very good time while providing regular updates to the client.
@@ -37,17 +47,17 @@
   link: www.nudgedigital.co.uk
   dates: August 2014 - November 2015
   job_title: Developer
-  description: >
+  description: |
     While working at Nudge I was able to work on a large number of projects ranging from small Drupal sites to large
     enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations.
     At Nudge I was also given the oppertunity to work with all of my core skills and to gain new skills in things
     such as <mark>Symfony</mark>, <mark>Angular</mark> and <mark>Gulp</mark>. I also worked on a number of <mark>iOS</mark> and
     <mark>Android</mark> applications.
-    <br><br>
+
     During my time at Nudge I was able to help the lead developer with the writing of Technical Specifications and
     also Project Requirements. I feel this is a useful skill to have as it helps me to become an even more well-rounded
     developer.
-    <br><br>
+
     During the summer I had the opportunity to head to Accra, Ghana and work with the team out there. This was a
     great opportunity to learn more about the industry in another country but also to allow me to lead their
     team for a few weeks and gain lots of experience of remote teams.
@@ -56,12 +66,11 @@
   link: www.gwsmedia.com
   dates: June 2012 - August 2014
   job_title: Web Developer
-  description: >
+  description: |
     I started working for GWS Media part time during my third year at University and continued full time once I had
     graduated. It was during this role that I learnt many of the fundamentals that I have been building on over
     the past 3 years. Whilst at GWS I had the opportunity to work with:
-    <br>
     <mark>Drupal</mark>, <mark>Magento</mark>, <mark>Bootstrap</mark>, <mark>Codeigniter</mark>, <mark>Android</mark> and <mark>iOS</mark>.
-    <br><br>
+
     I feel like having the opportunity to use a large range of different things early on in my career has given me
     the drive to always want to try new tools and frameworks.
