Updated email address

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: James Grant
 title: Full Stack & Mobile Developer
-email: james@jwgmedia.co.uk
+email: sprog31@gmail.com
 website: www.jwgmedia.co.uk
 
 # Social links
