--- a/_config.yml
+++ b/_config.yml
@@ -24,17 +24,17 @@ linkedin_username: jameswgrant
 # about_title: About Me
 about_profile_image: images/me-rain-small.jpg
 about_content: |
-  Hi, my name is James Grant, I'm a full stack web and mobile app developer with 5+ years experience based in the South West.
+  Hi, my name is James Grant, I'm a full stack web and mobile app developer with over 6 years experience, based in the South West.
   I am currently working for the Royal Bank of Scotland as a frontend software engineer on a comercial banking platform.
 
   I enjoy making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience.
   I have worked with a range of different languages and frameworks and I am always looking for opportunities to work
   with something new. The things that I currently have the most experience working with are:
-  <mark>PHP</mark>,
   <mark>ES6 Javascript</mark>,
-  <mark>Java</mark>,
-  <mark>MySQL</mark>,
   <mark>React &amp; Redux</mark>,
+  <mark>Java</mark>,
+  <mark>PHP</mark>,
+  <mark>MySQL</mark>,
   <mark>Symfony</mark>,
   <mark>Android</mark>,
   <mark>SASS</mark>,
