Fixed spelling mistake in RBS experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
   dates: August 2017 - Present
   job_title: Software Engineer
   description: |
-    I am currently working at The Royal Bank on Scotland as a full stack engineer focusing mostly on the front end of a corporate banking product.
+    I am currently working at The Royal Bank of Scotland as a full stack engineer focusing mostly on the front end of a corporate banking product.
     Working as part of a scrum team consiting of 5 developers, 2 testers and a PO/BA I have the oportunity to help drive the team forwards and
     work with the PO defining what we are building.
 
