--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ more_content: |
   rock climbing and playing some rugby. Since my time at Uni I have become a very keen Kitesurfer and freestyle
   Landboarder. In 2014 I competed and won the amateur landboard British powerkite tour.
 
-  I am very interested in photography and videography as I like to be creative. This is mainly through sport but
+  I'm interested in photography and videography as I like to be creative, this is mainly through sport but
   I enjoy landscape and abstract photography too. I like to showcase my work on my website and instagram if
   you would like to take a look -
   [jwgmedia.co.uk](http://jwgmedia.co.uk/) / [jameswgrant](https://www.instagram.com/jameswgrant/).
