--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ linkedin_username: jameswgrant
 
 # About Section
 # about_title: About Me
-about_profile_image: images/me-rain-small.jpg
+about_profile_image: images/jg.jpg
 about_content: |
   Hi, my name is James Grant, I'm a full stack web and mobile app developer with over 6 years experience, based in the South West.
   I am currently working for the Royal Bank of Scotland as a frontend software engineer on a comercial banking platform.
@@ -67,7 +67,7 @@ more_content: |
   Bristol's indoor climbing centres or down the Rec supporting Bath Rugby.
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 
 # Build settings
 remote_theme: sproogen/resume-theme
