--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,16 @@
-- name: itsgoingto.be
+- layout: top-middle
+  name: Mordern Resume Theme
+  link: sproogen.github.io/modern-resume-theme
+  github: sproogen/modern-resume-theme
+  quote: >
+    A modern simple static resume template and theme. Powered by Jekyll and GitHub pages.
+  description: |
+    This is a <mark>Jekyll</mark> theme that I have recently created, in fact it is what this resume has been built with.
+    I decided I wanted to learn how to create a fully open source project and thought that this would be the perfect project to do this with.
+    It has allowed me to share something I have created in a way that will be helpful for lots of people while also learning from this myself.
+
+- layout: top-middle
+  name: itsgoingto.be
   link: www.itsgoingto.be
   github: sproogen/itsgoingto.be
   quote: >
@@ -13,16 +25,6 @@
     enjoyed managing my own project and designing my own architecture and implementing this to a high standard.
 
     Feel free to check out the whole project on GitHub to get a feel for how I work [here](https://github.com/sproogen/itsgoingto.be).
-
-- name: Mordern Resume Theme
-  link: sproogen.github.io/modern-resume-theme
-  github: sproogen/modern-resume-theme
-  quote: >
-    A modern simple static resume template and theme. Powered by Jekyll and GitHub pages.
-  description: |
-    This is a <mark>Jekyll</mark> theme that I have recently created, in fact it is what this resume has been built with.
-    I decided I wanted to learn how to create a fully open source project and thought that this would be the perfect project to do this with.
-    It has allowed me to share something I have created in a way that will be helpful for lots of people while also learning from this myself.
 
 # - name: Forecastr
 #   link: www.forecastr.co.uk
